tests/errors/semantic/non_blocking/PRIMITIVE_IMMUTABLE_RESTRICTION_IS_complex.py
@types('complex', 'complex')
def compare_is_complex(a, b):
    return a is b
